mylab-yaml/endpointex.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: nginx-external
  name: nginx-external
  namespace: default
subsets:
- addresses:
  - ip: 112.80.248.75 
  ports:
  - name: http
    port: 80
    protocol: TCP
